--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "genius-api": "^0.4.1",
     "lodash": "^4.17.11",
+    "lyricist": "^2.2.2",
     "node-fetch": "^2.5.0",
     "request": "^2.88.0"
   }
